# cerberus-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  rxconfig.py  test_dashboard_error.py  test_dashboard_nmap.py  test_dashboard_nmap_enhanced.py  tmp_parallel_tasks.txt
.cerberus/audit/: forensic_20260416234102-0590bf1e.jsonl  forensic_20260416234201-d1788259.jsonl  forensic_20260417000320-27aeb069.jsonl
.cerberus/errors/: SUP-59CF4A4E0C00.json
.cerberus/sessions/: index.json
.devcontainer/: docker-compose.yml
.flowbaby/: .dataset_migration_complete  bridge-env.json  bridge-version.json  daemon.pid
.flowbaby/daemon.lock/: owner.json
.flowbaby/system/: .migration_v1_complete
.github/: copilot-instructions.md
.github/instructions/: todos.instructions.md
.github/workflows/: benchmarks.yml  embeddings-tests.yml
.pytest_failures/: summary.txt  tests_commands_test_command_cost.py__TestCostCommand__test_handle_daily_with_data.out  tests_commands_test_command_cost.py__TestCostCommand__test_handle_daily_with_data.txt  tests_commands_test_command_cost.py__TestCostCommand__test_handle_models_with_data.out  tests_commands_test_command_cost.py__TestCostCommand__test_handle_models_with_data.txt  tests_commands_test_command_cost.py__TestCostCommand__test_handle_reset_no_data.out  tests_commands_test_command_cost.py__TestCostCommand__test_handle_reset_with_confirmation.out  tests_commands_test_command_cost.py__TestCostCommand__test_handle_sessions_with_data.out  tests_commands_test_command_cost.py__TestCostCommand__test_handle_sessions_with_limit.out  tests_core_test_openai_chatcompletions.py__test_fetch_response_non_stream.out  tests_core_test_openai_chatcompletions.py__test_fetch_response_stream.out  tests_tracing_test_agent_tracing.py__test_not_starting_streaming_creates_trace.out  tests_tracing_test_agent_tracing.py__test_wrapped_trace_is_single_trace.out  tests_tracing_test_tracing.py__test_complex_async_tracing.out  tests_tracing_test_tracing.py__test_start_and_end_called_async_ctxmanager.out  tests_tracing_test_tracing.py__test_start_and_end_called_manual.out  tests_tracing_test_tracing_errors_streamed.py__test_input_guardrail_error.out  tests_tracing_test_tracing_errors_streamed.py__test_max_turns_exceeded.out
app/: __init__.py  app.py
archive/: Mission_Report_0142d3e2_20260418_105006.md  Mission_Report_0142d3e2_20260418_105022.md
audit/: OUTSTANDING_TECHNICAL_DEBT.md
cerberus_dashboard/: __init__.py  cerberus_dashboard.py  state.py
cerberus_reflex/: __init__.py  cerberus_reflex.py
dockerized/: Dockerfile  Dockerfile.tools_hub  README_DOCKER.md  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  internal-tools.yml  sitecustomize_litellm.py  sitecustomize_system_patch.py  tools_hub_entrypoint.sh
dockerized/qdrant_data/: raft_state.json
e2e/: dashboard-2x2-grid-busy-active.spec.ts  dashboard-sanity.spec.ts  global-setup.ts  intel-drawer-persistence.spec.ts  nmap-execution.spec.ts
memory/: bus_manifest.msgpack  logic_snapshot.json
scripts/: cleanup_for_release.sh
src/cai/: __init__.py  cli.py  main.py  util.py
src/cerberus/: cli.py  config.py  main.py  mcp_bootstrap.py  parsers.py  persona_runtime.py  util.py
src/reflex_dashboard/: __init__.py  app.py  commands.py
src/rich/: __init__.py  align.py  box.py  console.py  live.py  logging.py  panel.py  progress.py  prompt.py  table.py  text.py  tree.py
tests/: conftest.py  fake_model.py  helpers.py  test_cli_print_deduplication.py  test_compact_command.py  test_embeddings.py  test_guardrails.py  test_ingestion.py  test_policy_engine_security.py  test_pricing.py  test_retrieval_eval.py  test_retriever_pipeline.py  test_session_normalization.py  test_sessions.py  test_smbclient_wrapper.py  test_summaries_loader.py  test_triplestore.py  test_unified_pattern.py  test_validation.py  test_wakeup_index.py  testing_processor.py
tests/agents/: test_agent_config.py  test_agent_hooks.py  test_agent_inference.py  test_agent_one_tool.py  test_agent_prompt_system_master_template.py  test_agent_runner.py  test_agent_runner_streamed.py  test_factory_mcp_injection.py  test_global_hooks.py  test_guardrails.py  test_items_helpers.py  test_max_turns.py
tests/cli/: base_cli_test.py  test_branding_regression.py  test_cli_streaming.py
tests/commands/: test_command_agent.py  test_command_base.py  test_command_config.py  test_command_cost.py  test_command_flush.py  test_command_help.py  test_command_history.py  test_command_load.py  test_command_model.py  test_command_parallel.py  test_environment_manager_rewrite.py  test_mcp_bootstrap.py  test_mcp_persistence.py  test_parallel_custom_prompts.py  test_parallel_interrupt_history.py
tests/core/: test_auto_compact.py  test_browser_recon_tool.py  test_dashboard_prompt_routing.py  test_dashboard_workspace_layout.py  test_env_manager.py  test_headless_prompt_dispatch.py  test_litellm_audit_logging.py  test_openai_chatcompletions.py  test_openai_chatcompletions_converter.py  test_openai_chatcompletions_stream.py  test_openai_responses_converter.py  test_openai_tool_argument_contracts.py  test_output_truncation.py  test_parallel_executor_metadata.py  test_parallel_tool_executor.py  test_policy_engine.py  test_process_handler.py  test_qdrant_workspace_filter.py  test_responses.py  test_run_config.py  test_run_step_execution.py  test_run_step_processing.py  test_runtime_env_config.py  test_runtime_policy_tiers.py  test_safe_duration_to_float.py  test_searxng_web_search.py  test_stream_tool_call_rendering.py  test_workspace_write_path_guard.py
tests/integration/: test_end_to_end_recon.py  test_nmap_live_scan.py
tmp_test_run/: .cai_history_test
tools/: __init__.py  asciinema.py  case_study_generator.py  gif.py  logs.py  playwright_check.py  playwright_layout_check.py  replay.py
workspace_cli_test/: init_only.out  list_tools.out  scope.json  scope_alt.json
workspaces/: .gitkeep
(+455 files in other folders)
